--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,3 @@
-# Vercel Blob Storage
-# Get your token from: https://vercel.com/dashboard/stores
-BLOB_READ_WRITE_TOKEN=your_blob_token_here
-
-# Background Video URL
-# Upload subway_surfers.mp4 to Vercel Blob and paste the URL here
-# This must be a public NEXT_PUBLIC_ variable so Remotion can access it
-NEXT_PUBLIC_BACKGROUND_VIDEO_URL=https://your-blob-url.vercel-storage.com/subway_surfers.mp4
-
 # Site URL (for API calls from background jobs)
-# For local: http://localhost:3000
-# For production: https://your-app.vercel.app
+# For local development: http://localhost:3000
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
