finally added finetuned LLM functionality

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
 # Site URL (for API calls from background jobs)
 # For local development: http://localhost:3000
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
+
+# AWS Credentials for SageMaker
+AWS_ACCESS_KEY_ID=your_access_key_here
+AWS_SECRET_ACCESS_KEY=your_secret_key_here
+AWS_REGION=us-east-2
+SAGEMAKER_ENDPOINT_NAME=subway-surfers-fine-tuned
