--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-sagemaker-runtime": "^3.948.0",
+    "@aws-sdk/credential-providers": "^3.948.0",
+    "@aws-sdk/protocol-http": "^3.370.0",
+    "@aws-sdk/signature-v4": "^3.370.0",
+    "@aws-sdk/types": "^3.936.0",
     "@remotion/bundler": "^4.0.373",
     "@remotion/cli": "^4.0.0",
     "@remotion/renderer": "^4.0.373",
     "next": "^14.2.0",
     "node-edge-tts": "^1.0.3",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "remotion": "^4.0.0"
